saving and showing hourly data properly

--- a/app/src/main/res/layout/hourly_weather_item.xml
+++ b/app/src/main/res/layout/hourly_weather_item.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/hourlyImageView" />
+        app:layout_constraintBottom_toTopOf="@id/hourlyImageView"
+        android:text="test" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/hourlyImageView"
