initial pass at hourly data

--- a/app/src/main/res/layout/hourly_weather_item.xml
+++ b/app/src/main/res/layout/hourly_weather_item.xml
@@ -5,13 +5,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tempText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/hourText"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/hourText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/hourlyImageView"
-        android:text="test" />
+        app:layout_constraintTop_toBottomOf="@id/tempText"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/hourlyImageView"
@@ -19,6 +28,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hourText"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
