--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -96,4 +96,14 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonComposeActivity"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llHourly"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Compose Activity"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
